syntax = 'proto3';

message S2C_MatchFoundNotification {
    uint32 score = 1;
    uint32 gold = 2;
    uint32 towerCost = 3;
    uint32 baseHp = 4;
    uint32 highScore = 5;
    uint32 numOfInitialTowers = 6;
    uint32 monsterSpawnInterval =7;
    uint32 nextLevelInterval = 8;
    uint32 levelUpScore = 9;
    map<string, UserData> data = 10;
    message UserData {
        repeated Coords monsterPath = 1;
        repeated Coords initialTowerCoords = 2;
        Coords basePosition = 3;
        message Coords {
            float x = 1;
            float y = 2;
        }
    }
}

message S2C_TowerPurchaseNotification {
    float x = 1;
    float y = 2;
}

message S2C_TowerAttackNotification {
    uint32 towerIndex = 1;
    uint32 monsterIndex = 2;
}

message S2C_MonsterSpawnNotification {
    uint32 monsterNumber = 1;
    uint32 monsterIndex = 2;
}

message S2C_MonsterKillNotification {
    uint32 monsterIndex = 1;
}

message S2C_GameOverNotification {
    bool isWin = 1;
    uint32 baseHp = 2;
}

message S2C_ChattingNotification {
    string chat = 1;
}

message NotificationPacket {
    uint64 timestamp = 1;
    string message = 2;
    oneof payload {
        S2C_MatchFoundNotification matchFoundNotification = 3;
        S2C_TowerPurchaseNotification towerPurchaseNotification = 4;
        S2C_TowerAttackNotification towerAttackNotification = 5;
        S2C_MonsterSpawnNotification monsterSpawnNotification = 6;
        S2C_MonsterKillNotification monsterKillNotification = 7;
        S2C_GameOverNotification gameOverNotification = 8;
        S2C_ChattingNotification chattingNotification = 9;
    }
}