syntax = "proto3";

// 서버 -> 클라이언트: 회원가입 응답 패킷
message S2C_SignUpResponse {
    
}

// 서버 -> 클라이언트: 로그인 응답 패킷
message S2C_SignInResponse {
    string token = 1; // 성공 시 발급되는 JWT 토큰
}

message S2C_TowerPurchaseResponse {

}

message S2C_TowerAttackResponse {

}

message S2C_MonsterSpawnResponse {

}

message S2C_MonsterKillResponse {

}

message S2C_BaseAttackedResponse {

}

message ResponsePacket {
    bool success = 1; // true = 성공, false = 실패
    string message = 2; // 성공/실패 출력 메세지
    uint32 failCode = 3; // GlobalFailCode fail_code = 4;
    oneof payload {
        S2C_SignUpResponse signUpResponse = 4;
        S2C_SignInResponse signInResponse = 5;
        S2C_TowerPurchaseResponse towerPurchseResponse = 6;
        S2C_TowerAttackResponse towerAttackResponse = 7;
        S2C_MonsterSpawnResponse monsterSpawnResponse = 8;
        S2C_MonsterKillResponse monsterKillResponse = 9;
        S2C_BaseAttackedResponse baseAttackedResponse = 10;
    }
}